--- a/header-css.css
+++ b/header-css.css
@@ -104,6 +104,12 @@ nav {
     }
 }
 
+@media (max-width: 400px) {
+    .headernav div a {
+        font-size: 1em;
+    }
+}
+
 @media (any-pointer: coarse) {
     .headernav a:hover {
         color: var(--white);
